stylesheet.css
.list-group-item {
    line-height: 2.5;
  }
  
 body {
   background-image: url(./public/images/background.jpg);
 }

 .nav-wrapper .page-footer {
   font-family: 'Oxygen';
 }

 .logo-font {
   font-family: 'Muli';
   height: 64px;
   margin-top: 0;
   padding-top: 0;
   margin-left: 20px;
 }

 /* .navbar-material .nav-wrapper .brand-logo img {
  height: 64px;
} */

/* Google Font Families */
 /* font-family: 'Ubuntu', sans-serif;
font-family: 'Muli', sans-serif;
font-family: 'Oxygen', sans-serif; */

